# LightAgent

./: .gitignore  02.tools_agent.py  FAQ.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  mcp_release.md  mcp_release.zh-CN.md  pyproject.toml  requirements.txt
LightAgent/: __init__.py  la_core.py
example/: 01.single_agent.py  02.tools_agent.py  03.memory_mem0.py  04.multi_agent.py  05.self_learning.py  06.chat_with_history.py  07.use_mcp.py  08.browser_use.py  09.create_tools.py
example/tools/: get_weather.py
mcp/: lightagent_mcp_settings.json
mcp/mcpServers/: mcpServer_demo_stdio.py  mcpServer_weather_sse.py
